--- a/src/index.css
+++ b/src/index.css
@@ -202,11 +202,14 @@ button{
     width: 700px !important;
 }
 
-footer
-{
-    background-color: #000;
+footer{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #29282d
 }
 
+footer ul{
+    list-style-type: none;
+}
 @media (max-width: 1199.98px) {
      h1{
         font-size: 26px !important;
@@ -250,7 +253,7 @@ footer
     
     #reviews .carousel-inner
     {
-        height: 120px;
+        min-height: 150px;
     }   
     #articlesPage .text-right{
         text-align: left !important;
