--- a/src/index.css
+++ b/src/index.css
@@ -210,6 +210,24 @@ footer{
 footer ul{
     list-style-type: none;
 }
+
+#arrowUp{
+    position: fixed;
+    bottom:40px;
+    right:50px;
+    background-color: rgba(0,0,0,0.7);
+    width:50px;
+    height:50px;
+    text-align: center;
+    cursor:pointer;
+    color:#fff;
+}
+#arrowUp:hover{
+    background-color: rgba(0,0,0,1);
+    width:50px;
+    height:50px;
+    text-align: center;
+}
 @media (max-width: 1199.98px) {
      h1{
         font-size: 26px !important;
