--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Albertusfont !important;
-   font-weight: 200 !important;
-   letter-spacing: 1px;
+body
+{
+    font-family: Albertusfont !important;
+    font-weight: 200 !important;
+
+    margin: 0;
+    padding: 0;
+
+    letter-spacing: 1px;
 }
 
-@font-face{
+@font-face
+{
     font-family: Albertusfont;
+
     src: url(Albertusfont.otf);
 }
 
@@ -16,7 +21,8 @@ ul
     padding: 0;
 }
 
-button{
+button
+{
     cursor: pointer;
 }
 
@@ -47,11 +53,13 @@ button{
 }
 
 .carousel,
-.carousel-inner{
-    height:100%;
+.carousel-inner
+{
+    height: 100%;
 }
 
-#articles,#schedule
+#articles,
+#schedule
 {
     background-color: #20232c;
 }
@@ -60,7 +68,6 @@ button{
 {
     background: no-repeat;
     background-position: top left;
-
 }
 
 #arts .wrapper
@@ -133,36 +140,43 @@ button{
 
 /*About*/
 
-#aboutPage p{
-    text-indent: 1.5em;
+#aboutPage p
+{
     text-align: justify;
+    text-indent: 1.5em;
 }
 
 /*Masters page*/
 
-#masters .wrapper, #library .wrapper
+#masters .wrapper,
+#library .wrapper
 {
     height: 400px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.5); 
+
     background: no-repeat;
     background-position: top;
     background-size: cover;
+    box-shadow: 0 0 20px rgba(0,0,0,.5);
 }
 
 #masters .wrapper:hover .card
 {
-    box-shadow: 0 0 0 rgba(0,0,0,0);
     transition: .5s;
-    background-color: rgba(0,0,0,0.8);
+
+    background-color: rgba(0,0,0,.8);
+    box-shadow: 0 0 0 rgba(0,0,0,0);
 }
 
-#masters .wrapper:hover, #library .wrapper:hover
+#masters .wrapper:hover,
+#library .wrapper:hover
 {
     transition: .5s;
+
     box-shadow: 0 0 0 rgba(0,0,0,0);
 }
 
-#masters .card, #library .card
+#masters .card,
+#library .card
 {
     width: 100%;
     height: 100%;
@@ -172,16 +186,18 @@ button{
     background: transparent;
 }
 
-#masters .text-white, #library .text-white
+#masters .text-white,
+#library .text-white
 {
     text-decoration: none;
 }
 
 #library .wrapper:hover .card
 {
-    box-shadow: 0 0 0 rgba(0,0,0,0);
     transition: .5s;
+
     background-color: #000;
+    box-shadow: 0 0 0 rgba(0,0,0,0);
 }
 
 #articlesPage .card-body img
@@ -189,13 +205,17 @@ button{
     width: 100%;
 }
 
-.blackBG{
+.blackBG
+{
     position: fixed;
     z-index: 20;
-    background-color: rgba(0,0,0,0.9);
-    height:100%;
-    width:100%;
+
+    width: 100%;
+    height: 100%;
+
     transition: 1s;
+
+    background-color: rgba(0,0,0,.9);
 }
 
 .form-inline .form-control
@@ -203,92 +223,115 @@ button{
     width: 700px !important;
 }
 
-footer{
+footer
+{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #29282d
+
+    background-color: #29282d;
 }
 
-footer a{
-    color:#fff !important;
+footer a
+{
+    color: #fff !important;
 }
 
-footer ul{
+footer ul
+{
     list-style-type: none;
 }
 
-#arrowUp{
+#arrowUp
+{
     position: fixed;
-    bottom:40px;
-    right:50px;
-    background-color: rgba(0,0,0,0.7);
-    width:50px;
-    height:50px;
+    right: 50px;
+    bottom: 40px;
+
+    width: 50px;
+    height: 50px;
+
+    cursor: pointer;
     text-align: center;
-    cursor:pointer;
-    color:#fff;
+
+    color: #fff;
+    background-color: rgba(0,0,0,.7);
 }
-#arrowUp:hover{
+#arrowUp:hover
+{
+    width: 50px;
+    height: 50px;
+
+    text-align: center;
+
     background-color: rgba(0,0,0,1);
-    width:50px;
-    height:50px;
-    text-align: center;
 }
-@media (max-width: 1199.98px) {
-     h1{
+@media (max-width: 1199.98px)
+{
+    h1
+    {
         font-size: 26px !important;
     }
 }
 
-@media (max-width: 991.98px) { 
-    html {
+@media (max-width: 991.98px)
+{
+    html
+    {
         font-size: 14px;
-    } 
+    }
 
-    body, .btn{
+    body,
+    .btn
+    {
         font-size: 12px !important;
     }
-    h1{
+    h1
+    {
         font-size: 22px !important;
     }
-    h2{
+    h2
+    {
         font-size: 15px !important;
     }
 
-    #channels iframe{
+    #channels iframe
+    {
         width: 100%;
     }
 
-    #social a{
+    #social a
+    {
         font-size: 12px;
     }
     #headerCarousel
     {
         height: auto;
-        min-height:200px;
+        min-height: 200px;
     }
-    .keyAuth{
+    .keyAuth
+    {
         text-align: center;
     }
-    #arrowUp{
-         font-size: 14px !important;
+    #arrowUp
+    {
+        font-size: 14px !important;
     }
-
-
 }
-@media (max-width: 767.98px) { 
-    
+@media (max-width: 767.98px)
+{
     #reviews .carousel-inner
     {
         height: 200px;
-    }   
-    #articlesPage .text-right{
+    }
+    #articlesPage .text-right
+    {
         text-align: left !important;
     }
     #headerCarousel
     {
-        min-height:100px;
+        min-height: 100px;
     }
-    #login .form{
-        width:100%;
+    #login .form
+    {
+        width: 100%;
     }
 }
