--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body
 {
-    font-family: Albertusfont !important;
+    font-family: Albertusfont, Arial !important;
     font-weight: 200 !important;
 
     margin: 0;
