--- a/src/index.css
+++ b/src/index.css
@@ -95,30 +95,43 @@ button
     background-color: #20232c;
 }
 
-#social a:nth-child(1) i:hover
-{
-    color: #4a76a8;
+#social i{
+  display: inline-block;
+  border-radius: 30px;
+  box-shadow: 0px 0px 2px #888;
+  padding: 0.5em 0.6em;
 }
 
-#social a:nth-child(2) i:hover
-{
-    color: #7389dc;
-}
 #social a:nth-child(3) i:hover
 {
-    color: #f00;
+    box-shadow: none;
+    background-color: #4a76a8;
 }
+
 #social a:nth-child(4) i:hover
 {
-    color: #f96854;
+    box-shadow: none;
+    background-color: #7389dc;
 }
 #social a:nth-child(5) i:hover
 {
-    color: #2da5e1;
+    box-shadow: none;
+    background-color: #f00;
 }
 #social a:nth-child(6) i:hover
 {
-    color: #4b367c;
+    box-shadow: none;
+    background-color: #f96854;
+}
+#social a:nth-child(7) i:hover
+{
+    box-shadow: none;
+    background-color: #2da5e1;
+}
+#social a:nth-child(8) i:hover
+{
+    box-shadow: none;
+    background-color: #4b367c;
 }
 
 #reviews img
@@ -276,6 +289,10 @@ footer ul
     h1
     {
         font-size: 26px !important;
+    }
+    h3
+    {
+        font-size: 15px !important;
     }
 }
 
