--- a/src/index.css
+++ b/src/index.css
@@ -251,8 +251,7 @@ button
 footer
 {
     font-family: Arial, Helvetica, sans-serif;
-
-    background-color: #29282d;
+    background-color: #20232c;
 }
 
 footer a
