--- a/src/index.css
+++ b/src/index.css
@@ -95,40 +95,41 @@ button
     background-color: #20232c;
 }
 
-#social i{
+#social svg{
   display: inline-block;
   border-radius: 30px;
   box-shadow: 0px 0px 2px #888;
-  padding: 0.5em 0.6em;
+  padding: 0.7em 1em;
+  margin: 1em;
 }
 
-#social a:nth-child(3) i:hover
+#social a:nth-child(3) svg:hover
 {
     box-shadow: none;
     background-color: #4a76a8;
 }
 
-#social a:nth-child(4) i:hover
+#social a:nth-child(4) svg:hover
 {
     box-shadow: none;
     background-color: #7389dc;
 }
-#social a:nth-child(5) i:hover
+#social a:nth-child(5) svg:hover
 {
     box-shadow: none;
     background-color: #f00;
 }
-#social a:nth-child(6) i:hover
+#social a:nth-child(6) svg:hover
 {
     box-shadow: none;
     background-color: #f96854;
 }
-#social a:nth-child(7) i:hover
+#social a:nth-child(7) svg:hover
 {
     box-shadow: none;
     background-color: #2da5e1;
 }
-#social a:nth-child(8) i:hover
+#social a:nth-child(8) svg:hover
 {
     box-shadow: none;
     background-color: #4b367c;
