--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body
 
     margin: 0;
     padding: 0;
-    background-color: #587ea2 !important;
+    background-color: #27292c !important;
     letter-spacing: 1px;
 }
 
@@ -36,14 +36,19 @@ button
 
 #Navigation{
     height:100vh;
-    width: 50px;
+    width: 40px;
     background: #181818;
     z-index: 999;
     overflow: hidden;
+    transition: .5s;
+}
+
+#Navigation:hover{
+    margin-left: 0 !important;
 }
 
 #Navigation svg{
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
 
 #Navigation svg,
@@ -58,7 +63,18 @@ button
 .active{
     color: #55bbeb;
 }
+
 /*HomePage*/
+
+#HomePage{
+    padding-top: 100px;
+}
+
+.page_card{
+    padding: 10px;
+    height: 100px;
+    background: #3b3c40;
+}
 
 #headerCarousel
 {
