--- a/src/index.css
+++ b/src/index.css
@@ -70,40 +70,7 @@ button
 
 /*HomePage*/
 
-.grid-container {
-  display: grid;
-  height: 100%;
-  grid-gap: 15px;
-}
-
-.item-header{
-  grid-column: 1 / span 3;
-  grid-row: 1;  
-}
-
-.item-msgs {
-  grid-column: 1;
-  grid-row: 2;
-}
-
-.item2 {
-  grid-column: 1;
-  grid-row: 3;
-}
-
-.item-games {
-  grid-column: 2;
-  grid-row: 2 / span 2;
-}
-
-.item-news {
-  grid-column: 3;
-  grid-row: 2 / span 2;
-}
-
-.page_card,
-.news_card,
-.msgs_card{
+.bg_card{
     background: #3b3c40;   
 }
 
@@ -121,7 +88,8 @@ button
 
 
 .news_card:hover .news_card__wrapper{
-    background: rgba(74,118,168,0.8);
+    background: rgba(74,118,168,0.9);
+    transition: .5s
 }
 
 .news_card__wrapper{
@@ -130,8 +98,6 @@ button
     height:100%; 
     width:100%;
 }
-
-
 
 #headerCarousel
 {
