--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body
 section{
     height:100vh;
     overflow-y: scroll;
+    padding: 50px 0;
 }
 
 a{
@@ -66,7 +67,7 @@ button
     height:100vh;
     width: 40px;
     background: #181818;
-    z-index: 999;
+    z-index: 990;
     overflow: hidden;
     transition: .5s;
 }
@@ -95,18 +96,14 @@ svg,
 /*HomePage*/
 
 .bg_card{
-    background: #3b3c40;   
+    background: #3b3c40 !important; 
+    color: #fff !important;   
 }
 
 .page_card{
     padding: 10px;
     color:#fff;
     overflow: hidden;
-}
-
-.page_card:hover{
-    background: #fff;
-    color:#000;
 }
 
 .homepage__news{
