--- a/src/index.css
+++ b/src/index.css
@@ -240,6 +240,18 @@ svg,
     box-shadow: 0 0 0 rgba(0,0,0,0);
 }
 
+.userpage__avatar{
+    width: 100px; 
+    height: 100px; 
+    background: no-repeat;
+    background-position: top;
+    background-size: cover;
+}
+
+.userpage__facog:hover svg{
+    transform: rotate(90deg);
+    transition: .7s;
+}   
 .userCard{
     background-color: #fff
 }
