--- a/src/index.css
+++ b/src/index.css
@@ -149,49 +149,42 @@ svg,
     text-decoration: none;
 }
 
-#social
-{
-    background-color: #20232c;
+#social a{
+  border-radius: 10px;
+  margin:20px;
+  padding: 20px;
+  text-decoration: none;
+  color:#fff !important;
 }
 
 #social svg{
-  display: inline-block;
-  border-radius: 30px;
-  box-shadow: 0px 0px 2px #888;
-  padding: 0.7em 1em;
-  margin: 1em;
+  font-size: 2em;
 }
 
-#social a:nth-child(3) svg:hover
+#social a:nth-child(1):hover
 {
-    box-shadow: none;
-    background-color: #4a76a8;
+    color: #4a76a8 !important;
 }
 
-#social a:nth-child(4) svg:hover
+#social a:nth-child(2):hover
 {
-    box-shadow: none;
-    background-color: #7389dc;
+    color: #7389dc !important;
 }
-#social a:nth-child(5) svg:hover
+#social a:nth-child(3):hover
 {
-    box-shadow: none;
-    background-color: #f00;
+    color: #fa225b !important;
 }
-#social a:nth-child(6) svg:hover
+#social a:nth-child(4):hover
 {
-    box-shadow: none;
-    background-color: #f96854;
+    color: #f96854 !important;
 }
-#social a:nth-child(7) svg:hover
+#social a:nth-child(5):hover
 {
-    box-shadow: none;
-    background-color: #2da5e1;
+    color: #2da5e1 !important;
 }
-#social a:nth-child(8) svg:hover
+#social a:nth-child(6):hover
 {
-    box-shadow: none;
-    background-color: #4b367c;
+    color: #c54a9a !important;
 }
 
 #reviews img
