--- a/src/index.css
+++ b/src/index.css
@@ -250,6 +250,22 @@ svg,
 {
     width: 700px !important;
 }
+#artpage{
+    height: 100vh;
+    overflow-y: scroll;
+}
+.blackBG
+{
+    position: fixed;
+    z-index: 20;
+
+    width: 100%;
+    height: 100%;
+
+    transition: 1s;
+
+    background-color: rgba(0,0,0,.9);
+}
 
 .gamepage__container{
     width: 90%;
