--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,10 @@ textarea{
 
 /*Navigation */
 
+.navbar-toggler{
+    display: none;
+}
+
 #Navigation{
     height:100vh;
     width: 40px;
@@ -322,6 +326,7 @@ footer ul
 
     .navbar-toggler
     {
+        display: block;
         position: absolute;
         right: 10px;
         top:10px;
@@ -342,7 +347,7 @@ footer ul
 
         transition: .3s ease;
 
-        border: 1px solid #000;
+        border: 1px solid #fff;
     }
 
     .hr1
@@ -414,24 +419,37 @@ footer ul
         padding-top: 50px;
     }
     #Navigation{
-        height:40px;
-        display: inline-block;
+        height: auto;
         width: 100%;
         background: #181818;
-        z-index: 999;
-        overflow: hidden;
+        z-index: 900;
+        height: 100%;
+        padding-top: 40px;
     }   
-    #Navigation .flex-column{
-        flex-direction: row!important;
+    
+    #Navigation .d-flex{
+        align-items:center;
     }
+
     #Navigation ul{
-        padding-top: 5px;
-        display: flex;
+        padding-top: 5px;   
+        text-align: left !important;
+        height: 100%;
+        align-items: center;
     }
+
     #Navigation li{
-        padding-right: 10px;
-        padding-left: 10px;
+        margin: 10px 0;
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+     }
+
+    .nav_link{
+        display: inline-block !important;
+        margin-left: 5px;
     }
+
     .display-1{
         font-size: 3em !important;
     }
