--- a/src/index.css
+++ b/src/index.css
@@ -358,10 +358,12 @@ footer ul
 
         width: 50px;
         height: 50px;
-
-        border-color: transparent !important;
+        
         outline: none;
-        background: transparent;
+        background: rgba(169,169,169,0.2) !important;
+        border-radius: 25px !important;
+        width: 45px;
+        height: 45px;
     }
 
     .navbar-toggler hr
