--- a/src/index.css
+++ b/src/index.css
@@ -274,22 +274,6 @@ svg,
     margin: auto;
 }
 
-footer
-{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #20232c;
-}
-
-footer a
-{
-    color: #fff !important;
-}
-
-footer ul
-{
-    list-style-type: none;
-}
-
 @media (max-width: 1199.98px)
 {
     h1
@@ -339,6 +323,9 @@ footer ul
 }
 @media (max-width: 767.98px)
 {
+    html{
+        height: 100%;
+    }
     section{
         padding-top: 50px;
     }
