--- a/src/index.css
+++ b/src/index.css
@@ -290,7 +290,6 @@ svg,
 {
     html
     {
-        position:relative;
         font-size: 14px;
     }
 
@@ -324,8 +323,13 @@ svg,
 }
 @media (max-width: 767.98px)
 {
+     html
+    {
+        position:relative;
+    }
+
     section{
-        padding-top: 50px;
+        padding: 30px 0;
     }
 
     .navbar-toggler
@@ -335,7 +339,6 @@ svg,
         right: 10px;
         top:10px;
         z-index: 999;
-        
         outline: none;
         background: rgba(169,169,169,0.2) !important;
         border-radius: 25px !important;
