--- a/src/components/style/navigation.css
+++ b/src/components/style/navigation.css
@@ -104,8 +104,9 @@
         height: 100%;
         padding-top: 40px;
         justify-content: center;
-        align-items: center;
         background-color: #27292c;
+        font-size: 18px;
+        margin-top: 10px;
         text-align: center;
     }
     
