change navigation, add arrow up, change news block in home

--- a/src/components/style/navigation.css
+++ b/src/components/style/navigation.css
@@ -1,191 +1,13 @@
-.navbar-toggler
+
+.navbar
 {
-    display: none;
+    background: #587ea2;
 }
 
-.navigation
-{
-    z-index: 990;
-    position: absolute;
-    width: 40px;
-    height: 100vh;
-
-    transition: .5s;
-
-    background: #181818;
+.navbar-brand__img{
+    height: 60px;
 }
 
-.navigation__nav{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.navigation:hover
-{
-    margin-left: 0 !important;
-}
-
-.navigation svg
-{
-    font-size: 1.1em;
-}
-
-.navigation a:hover svg
-{
-    color: #55bbeb;
-}
-
-.navigation__link
-{
-    padding: 7px 0;
-}
-
-.navigation__link--active
-{
-    color: #55bbeb;
-}
-
-@media (max-width: 767.98px)
-{
-    .navbar-toggler
-    {
-        position: absolute;
-        z-index: 999;
-        top: 10px;
-        right: 10px;
-
-        display: block;
-
-        width: 45px;
-        height: 45px;
-
-        border-radius: 25px !important;
-        outline: none;
-        background: rgba(169,169,169,.2) !important;
-    }
-
-    .navbar-toggler hr
-    {
-        display: block;
-
-        width: 20px;
-        margin: 5px auto;
-
-        transition: .3s ease;
-
-        border: 1px solid #fff;
-    }
-
-    .hr1
-    {
-        top: 35%;
-        left: 25%;
-
-        transition: .3s ease;
-        -webkit-transform: skewY(-45deg);
-                transform: skewY(-45deg);
-    }
-    .hr3
-    {
-        top: 35%;
-        left: 25%;
-
-        transition: .3s ease;
-        -webkit-transform: skewY(45deg);
-                transform: skewY(45deg);
-    }
-
-    .navigation
-    {
-        z-index: 900;
-        display: flex;
-        width: 100%;
-        height: 100%;
-        padding-top: 40px;
-        justify-content: center;
-        background-color: #27292c;
-        font-size: 18px;
-        margin-top: 10px;
-        text-align: center;
-    }
-    
-    .navigation__link > * {
-        pointer-events: none;
-    }
-
-    .navigation__link--active > * {
-        color: #55bbeb;
-    }
-
-    .navigation:hover
-    {
-        margin-left: 100% !important;
-    }
-
-    .close_nav
-    {
-        right: 100%;
-
-        animation: close 1s ease;
-    }
-
-    .open_nav
-    {
-        right: 0;
-
-        animation: open 1s ease;
-    }
-
-    .navigation .d-flex
-    {
-        align-items: center;
-    }
-
-    .navigation__nav
-    {
-        margin: 0 auto;
-        align-items: start;
-    }
-
-    .link__text
-    {
-        display: inline-block !important;
-
-        margin-left: 5px;
-    }
-
-    #TooltipNavToggle
-    {
-        display: none;
-    }
-
-    .tooltip
-    {
-        display: none !important;
-    }
-
-    @keyframes close
-    {
-        0%
-        {
-            right: 0;
-        }
-        100%
-        {
-            right: 100%;
-        }
-    }
-
-    @keyframes open
-    {
-        0%
-        {
-            right: 100%;
-        }
-        100%
-        {
-            right: 0;
-        }
-    }
+.nav-link{
+    color:#fff !important;
 }
