--- a/src/components/style/home.css
+++ b/src/components/style/home.css
@@ -1,4 +1,17 @@
+.homepage__news{
+    height: calc(100vh - 80px);
+}
+.news__carousel{
+    height: calc(100vh - 80px);
 
+}
+.news__item{
+    align-items: center;
+    width: 80%;
+    margin:auto;
+    height: 100%;
+    justify-content: center;
+}
 .social
 {
     margin: 20px 0;
