change articles view on all pages

--- a/src/components/style/home.css
+++ b/src/components/style/home.css
@@ -1,16 +1,27 @@
-.homepage__news{
-    height: calc(100vh - 80px);
-}
+
 .news__carousel{
     height: calc(100vh - 80px);
 }
 .news__item{
     align-items: center;
-    width: 75%;
-    margin:auto;
-    height: 100%;
+    width: 100%;
+    display: flex;
+    margin: auto;
+    height: 100vh;
     justify-content: center;
+    background-color: rgba(0,0,0,0.6);
+    font-size: 23px;
 }
+
+.news__wrapper{
+    background-repeat: none;
+    background-size: cover;
+}
+
+.news__article{
+    width: 75%
+}
+
 .social
 {
     margin: 20px 0;
@@ -55,4 +66,19 @@
 .social__link:nth-child(6):hover
 {
     color: #c54a9a !important;
+}
+
+@media (max-width: 767.98px)
+{
+    .news__carousel{
+        height: auto;
+        min-height: 600px;
+    }
+    .news__item{
+        font-size: 14px;
+    }
+    .news__article{
+       width: 100%; 
+       padding: 20px;
+    }
 }
